# anchor_base_reference

account_constraints/instruction_attribute/: Anchor.toml
account_constraints/instruction_attribute/tests/: instruction_attribute.ts
account_constraints/normal_constraints/address/: Anchor.toml
account_constraints/normal_constraints/close/: Anchor.toml
account_constraints/normal_constraints/constraint/: Anchor.toml
account_constraints/normal_constraints/executable/: Anchor.toml
account_constraints/normal_constraints/has_one/: Anchor.toml  package-lock.json
account_constraints/normal_constraints/init/: Anchor.toml
account_constraints/normal_constraints/init_if_needed/: Anchor.toml  package-lock.json
account_constraints/normal_constraints/mut_constraint/: Anchor.toml
account_constraints/normal_constraints/owner/: Anchor.toml
account_constraints/normal_constraints/realloc/: Anchor.toml
account_constraints/normal_constraints/seed_and_bump/: Anchor.toml
account_constraints/normal_constraints/seed_and_bump/programs/seed_and_bump/: Cargo.toml
account_constraints/normal_constraints/seed_and_bump/programs/seed_and_bump/src/: lib.rs
account_constraints/normal_constraints/signer/: Anchor.toml
account_types/AccountInfo/: Anchor.toml
account_types/AccountLoader/: Anchor.toml
account_types/AccountLoader/programs/account-loader/: Cargo.toml
account_types/AccountLoader/programs/account-loader/src/: lib.rs
account_types/Interface/: Anchor.toml
account_types/UncheckedAccount/: Anchor.toml
account_types/account/: Anchor.toml
(+66 files in other folders)
